feat(user): adding get list sessions, adjust json api response, readjust folder dto